# scipy2026_starsim_ai

./: .gitignore  CLAUDE.md  Dockerfile  README.md  analyze.sh  docker-compose.yml  docker-entrypoint.sh  docker_up.sh  pyproject.toml  run_eval.sh  update_starsim_ai.sh
analysis/: debug_evals.py  eval_performance.py  quantify_results.py
claude_a2a/: claude_code_executor.py
eval/: run_parallel.sh
eval/agent/: check_a2a_servers.py  run.sh  starsim.py
eval/llm/: run.sh  starsim.py
eval/prompt/: README.md  run.sh  starsim.py
src/ssai/: claude_code_executor.py  claude_code_server.py
starsim-plugin/: .mcp.json
