[project]
name = "scipy2026-starsim-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katherine Rosenfeld", email = "krosenf@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
scipy2026-starsim-ai = "scipy2026_starsim_ai:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
